corpus/cpp/lambda_closure/case-01/snapshots/gcc13_14/native_text_capture/render.default.txt
note: some compiler details were not fully structured; original diagnostics are preserved
error: [lambda_closure] ‘value’ is not captured
src/main.cpp: In lambda function:
    3 |     auto lambda = []() { return value; };
      |                                 ^~~~~
raw : src/main.cpp:3:33: error: ‘value’ is not captured @ src/main.cpp:3:33
| src/main.cpp:3:33
|     auto lambda = []() { return value; };
|                                 ^
note: src/main.cpp:3:20: note: the lambda has no capture-default
note: src/main.cpp:2:9: note: ‘int value’ declared here